# embedcore

./: .gitignore  Cargo.toml  README.md
cpp_hal/include/: gpio.h  motor.h  pwm.h  timer.h  uart.h
cpp_hal/src/: gpio.cpp  motor.cpp  pwm.cpp  timer.cpp  uart.cpp
embedcore/: CODE_CONTEXT.md  Cargo.toml
embedcore-mcp/: Cargo.toml  README.md  SETUP.md  claude_desktop_config.json  mcp-config-example.json  setup-mcp.sh
embedcore-mcp/src/: lib.rs  main.rs  protocol.rs  resources.rs  server.rs  tools.rs
embedcore-sys/: Cargo.toml  build.rs
embedcore-sys/src/: lib.rs
embedcore/examples/: advanced_control_demo.rs  blinky.rs  enhanced_dashboard_demo.rs  ml_anomaly_detection_demo.rs  pid_control_demo.rs  robot_arm.rs  secure_servo_sweep.rs  security_demo.rs  servo_sweep.rs  visual_robot_arm.rs
embedcore/src/: control.rs  lib.rs  scheduler.rs  security.rs  task.rs  web_dashboard.rs
embedcore/src/devices/: gpio.rs  mod.rs  motor.rs  pwm.rs  uart.rs
embedcore/web/: index.html
