[package]
name = "embedcore-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for EmbedCore embedded systems framework"
license = "MIT"

[[bin]]
name = "embedcore-mcp"
path = "src/main.rs"

[dependencies]
embedcore = { path = "../embedcore" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

